# TorchCTS

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.github/workflows/: ci.yml
docs/: README.md  harness.md  release.md  site-stats.md
docs/coverage/: README.md  backend-pack-feasibility.json  backend-packs.md  contract-evidence.md  exclusions.md  oracle-authoring.md
scripts/: check_pytorch_version_holes.py  check_release_hygiene.py  collect_pytorch_dtype_contracts.py  collect_pytorch_ops.py  collect_pytorch_version_matrix.py  generate_op_dtype_contracts.py  generate_site_stats.py  pytorch_version_hole_exclusions.json  pytorch_version_matrix.json  reduce_pytorch_dtype_contracts.py  reduce_pytorch_op_inventory.py  update_pytorch_compatibility.py  verify_package_artifacts.py  verify_pytorch_dtype_contract_artifacts.py
site_scripts/: install.ps1  install.sh  install_plan.py
torchcts/: __init__.py  __main__.py  cli.py  conftest.py  coverage_exclusions.json  known_segfaults.json  op_metadata.json  op_metadata.py  sample_generation.py
torchcts/autograd/: test_backward.py  test_double_backward.py  test_gradcheck.py  test_inplace_safety.py  test_tensor_metadata_mutation.py
torchcts/compiler/: test_compile_dynamic.py  test_compile_ops.py  test_compile_training.py
torchcts/core/: __init__.py  adaptive_isolation.py  comparer.py  coverage.py  device.py  diagnose.py  dtype_contracts.py  evidence_pack.py  input_gen.py  known_segfaults.py  layout_tracker.py  manifest_schema.py  opinfo_adapter.py  oracle_assertions.py  oracles.py  pytorch_compat.py  quantized_decoders.py  reference_oracles.py  report.py  runtime_evidence.py  semantic_levels.py  tolerances.py  triage.py  version_rules.py
torchcts/device_api/: test_device_module.py  test_streams_events.py
torchcts/dtypes/: test_complex.py  test_copy_cast.py  test_fp8.py  test_metadata_ops.py  test_native_quantization.py  test_quantized.py
torchcts/errors/: test_error_handling.py
torchcts/memory/: test_allocator.py  test_determinism.py  test_guard_alloc.py
torchcts/multi_device/: test_multi_device.py
torchcts/operators/: test_activation.py  test_binary.py  test_comparison.py  test_conv.py  test_creation.py  test_fft.py  test_foreach.py  test_fractional_pooling_backward.py  test_index_scatter.py  test_linalg.py  test_loss.py  test_matmul.py  test_misc.py  test_named_tensors.py  test_nested.py  test_norm.py  test_padding.py  test_pooling.py  test_reduction.py  test_sparse.py  test_unary.py  test_upsample.py  test_view_shape.py
torchcts/opinfo/: __init__.py  test_opinfo_backward.py  test_opinfo_errors.py  test_opinfo_forward.py
torchcts/opinfo_cache/: ieee754_undefined.json  known_failures.json
torchcts/rng/: test_dropout_rrelu_variants.py  test_generator.py
torchcts/selftest/: test_diagnose.py  test_docs_public.py  test_harness_reporting.py  test_install_plan.py  test_mps_triage.py  test_package_artifacts.py  test_pytorch_version_matrix.py  test_site_stats.py
torchcts/serialization/: test_save_load.py
torchcts/site_scripts/: __init__.py  install_plan.py
torchcts/stress/: test_adversarial.py  test_edge_numerics.py  test_large_tensors.py  test_rapid_alloc.py
torchcts/strides/: test_advanced_indexing.py  test_channels_last.py  test_memory_format.py  test_noncontiguous.py  test_strided_inplace.py
torchcts/templates/: manifest.complete.py  manifest.inference.py  manifest.minimal.py  manifest.smoke.py  (+1 more)
(+17 files in other folders)
