[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchcts"
version = "0.1.0"
description = "A comprehensive PyTorch backend validation and benchmarking suite"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.12.0",
    "pytest>=7.0.0",
    "psutil>=5.0.0",
    "numpy",
    "expecttest",
]

[project.scripts]
torchcts = "torchcts.cli:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["torchcts*"]

[tool.setuptools.package-data]
torchcts = ["templates/*.py", "opinfo_cache/*.json"]

[tool.pytest.ini_options]
testpaths = ["torchcts"]
